<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash2"
    tools:context="online.inspiredactionlimited.inspiredactionltdapp.MainActivity">

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/v_flipper"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">


    <Button
        android:id="@+id/btn_airtel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_airtel"
        android:layout_weight="1"
        android:backgroundTint="@color/splash_bg"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn_mtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_mtn"
        android:backgroundTint="@color/splash_bg"
        android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">
    <Button
        android:id="@+id/btn_SMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_SMS1"
        android:backgroundTint="@color/splash_bg"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn_whatsapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_whatsapp"
        android:backgroundTint="@color/splash_bg"
        android:textColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

    <Button
        android:id="@+id/btn_appointment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/splash_bg"
        android:text="@string/btn_appiontment"
        android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_bg"
        android:gravity="center_horizontal"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#ffffff" />
    </LinearLayout>


</RelativeLayout>